tests/error/tracing_errors/linear_copy6.err
Error: Error in comptime function return (at $FILE:6:0)
  | 
4 | 
5 | @guppy.comptime
6 | def test() -> tuple[qubit, qubit]:
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ...
8 |     return q, q
  | ^^^^^^^^^^^^^^^

Value with non-copyable type `qubit` was already used

Previous use occurred in linear_copy6.py:11

Guppy compilation failed due to 1 previous error
